spacing fix for agree mlh

--- a/app/assets/stylesheets/partials/_app.scss
+++ b/app/assets/stylesheets/partials/_app.scss
@@ -396,6 +396,7 @@
   .agree {
     width: 20px;
     margin-left: 25px;
+    margin-top: -20px;
     position: relative;
     @media (max-width: 400px) {
       margin-bottom: 15px;
